Laden der Logistik-Ontologie und des PP-Falls jetzt möglich. Der Case-Viewer zeigt die Herkunft der jeweiligen Instanz an (Blau: Task-Ontologie, Rot: Domain-Ontologie)

--- a/src/main/resources/config/casebase.properties
+++ b/src/main/resources/config/casebase.properties
@@ -1,6 +1,5 @@
-tdbCaseBase=/Users/daniel/Desktop/data/tdb
-#tdbCaseBase=/Users/daniel/Desktop/data/tdb-logistik
-#domainModelFile=src/test/resources/classTestOntology.owl
-#domainModelFile=/Users/daniel/Desktop/logistik.owl
-domainModelFile=src/main/resources/ontologies/classTestOntology.owl
-#domainModelFile=/Users/daniel/Desktop/classTestOntology.owl
+#tdbCaseBase=/Users/daniel/Desktop/data/tdb
+tdbCaseBase=/Users/daniel/Desktop/data-logistik/tdb
+#domainModelFile=src/main/resources/ontologies/classTestOntology.owl
+domainModelFile=/Users/daniel/Desktop/logistik.owl
+domainNsOverride=http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#
