--- a/src/main/resources/config/casestructure.properties
+++ b/src/main/resources/config/casestructure.properties
@@ -1,30 +1,46 @@
 #Klassen - Müssen in der Domain-Ontologie vorhanden sein
 #Fallklasse in der Domain-Ontologie
-rootClass=Fall
+#rootClass=Fall
+rootClass=Projekt
 
 #Fallbeschreibungsklasse in der Domain-Ontologie
-descriptionClass=FallBeschreibung
+#descriptionClass=FallBeschreibung
+descriptionClass=Projektbeschreibung
 
 #Falllösungsklasse in der Domain-Ontologie
-solutionClass=FallLoesung
+#solutionClass=FallLoesung
+solutionClass=Projektloesung
 
 #Fallbewertungsklasse in der Domain-Ontologie
-justificationClass=FallBewertung
+#justificationClass=FallBewertung
+justificationClass=Projektbewertung
 
 #Instanzen
 #Fall Instanz in der Task-Ontologie
-rootIndv=I_Fall
+#rootIndv=I_Fall
+rootIndiv=Fall
+
 #Beschreibungsinstanz in der Task-Ontologie
-descriptionIndv=I_FallBeschreibung
+#descriptionIndv=I_FallBeschreibung
+descriptionIndv=Fallbeschreibung
+
 #Lösungsinstanz in der Task-Ontologie
-solutionIndv=I_FallLösung
+#solutionIndv=I_FallLösung
+solutionIndiv=Fallösung
+
 #Bewertungsinstanz in der Task-Ontologie
-justificationIndv=I_FallBewertung
+#justificationIndv=I_FallBewertung
+justificationIndv=Fallbewertung
 
 #Attribute (jeweils aus der Domain-Ontologie)
 #Attribut, das Fallinstanz und Fallbeschreibung verknüpft
-hasDescription=hatFallBeschreibung
+#hasDescription=hatFallBeschreibung
+hasDescription=bestehtAusFallbeschreibung
+
 #Attribut, das Fallinstanz und Falllösung verknüft
-hasSolution=hatFallLösung
+#hasSolution=hatFallLösung
+hasSolution=bestehtAusFalloesung
+
 #Attribut, das Fallinstanz und Fallbewertung verknüpft
-hasJustification=hatFallBewertung
+#hasJustification=hatFallBewertung
+hasJustification=bestehtAusFallbewertung
