Rudimentäre CBR-Falleingabe. Fehler im CaseViewer behoben, bei dem Instanzen mehrfach hinzugefügt werden.

--- a/src/main/resources/config/casestructure.properties
+++ b/src/main/resources/config/casestructure.properties
@@ -18,7 +18,7 @@ justificationClass=Projektbewertung
 #Instanzen
 #Fall Instanz in der Task-Ontologie
 #rootIndv=I_Fall
-rootIndiv=Fall
+rootIndv=Fall
 
 #Beschreibungsinstanz in der Task-Ontologie
 #descriptionIndv=I_FallBeschreibung
@@ -26,7 +26,7 @@ descriptionIndv=Fallbeschreibung
 
 #Lösungsinstanz in der Task-Ontologie
 #solutionIndv=I_FallLösung
-solutionIndiv=Fallösung
+solutionIndv=Fallösung
 
 #Bewertungsinstanz in der Task-Ontologie
 #justificationIndv=I_FallBewertung
@@ -35,12 +35,12 @@ justificationIndv=Fallbewertung
 #Attribute (jeweils aus der Domain-Ontologie)
 #Attribut, das Fallinstanz und Fallbeschreibung verknüpft
 #hasDescription=hatFallBeschreibung
-hasDescription=bestehtAusFallbeschreibung
+hasDescription=bestehtAusProjektbeschreibung
 
 #Attribut, das Fallinstanz und Falllösung verknüft
 #hasSolution=hatFallLösung
-hasSolution=bestehtAusFalloesung
+hasSolution=bestehtAusProjektloesung
 
 #Attribut, das Fallinstanz und Fallbewertung verknüpft
 #hasJustification=hatFallBewertung
-hasJustification=bestehtAusFallbewertung
+hasJustification=bestehtAusProjektbewertung
