Erste, ungetestete Version des erweiterten Beissel-Algorithmus implementiert.

--- a/src/test/resources/config/casestructure.properties
+++ b/src/test/resources/config/casestructure.properties
@@ -17,7 +17,7 @@ rootIndv=I_Fall
 #Beschreibungsinstanz in der Task-Ontologie
 descriptionIndv=I_FallBeschreibung
 #Lösungsinstanz in der Task-Ontologie
-solutionIndv=I_FallLösung
+solutionIndv=I_FallLoesung
 #Bewertungsinstanz in der Task-Ontologie
 justificationIndv=I_FallBewertung
 
@@ -25,6 +25,6 @@ justificationIndv=I_FallBewertung
 #Attribut, das Fallinstanz und Fallbeschreibung verknüpft
 hasDescription=hatFallBeschreibung
 #Attribut, das Fallinstanz und Falllösung verknüft
-hasSolution=hatFallLösung
+hasSolution=hatFallLoesung
 #Attribut, das Fallinstanz und Fallbewertung verknüpft
 hasJustification=hatFallBewertung
