--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>CORA</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -16,17 +17,50 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
+     <!--   <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>apache-jena-libs</artifactId>
             <type>pom</type>
             <version>2.10.0</version>
+        </dependency> -->
+        <dependency>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+
+
+        <dependency>
+                           <groupId>org.apache.jena</groupId>
+                           <artifactId>apache-jena-libs</artifactId>
+                           <type>pom</type>
+                           <version>2.10.0</version>
+
         </dependency>
 
         <dependency>
             <groupId>com.github.ansell.pellet</groupId>
             <artifactId>pellet-pellint</artifactId>
             <version>2.3.6-ansell</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.hp.hpl.jena</groupId>
+                    <artifactId>jena</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.ansell.pellet</groupId>
+            <artifactId>pellet-parent</artifactId>
+            <version>2.3.6-ansell</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.hp.hpl.jena</groupId>
+                    <artifactId>jena</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
