Data-Type infrakstruktur hinzugefügt: Kann jetzt in der Ontologie definierte, nicht-standard Datentypen anlegen. Leider funktioniert das so nicht: Die Property-Range kann zwar vom Datentyp x sein, um Restriktionen auf DataProperties realisieren zu können, muss das Literal jedoch ein xsd-standardtyp sein. D.h. - rdf:Datatype Meter : equivalentTo xsd:float - hatLänge rdf:Type owl:DataProperty - Auto hatLänge "2.5"^^Float

--- a/src/main/resources/config/typemapping.properties
+++ b/src/main/resources/config/typemapping.properties
@@ -6,3 +6,8 @@ http\://www.w3.org/2001/XMLSchema\#boolean=models.datatypes.BooleanValue
 http\://www.w3.org/2001/XMLSchema\#integer=models.datatypes.IntegerValue
 http\://www.w3.org/2001/XMLSchema\#float=models.datatypes.FloatValue
 http\://www.w3.org/2001/XMLSchema\#int=models.datatypes.IntegerValue
+
+#Spezielle Datentypen für die Logistik-Ontologie:
+http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Meter=models.datatypes.custom.MeterValue
+http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Euro=models.datatypes.custom.EuroValue
+http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Monate=models.datatypes.custom.MonateValue
