Der Typ eines Literals wird jetzt von der Range des zugehörigen DataProperties abgeleitet. D.h. bei hatLänge owl:range Meter Auto hatLänge "12.0"^^float wird abgeleitet, das das Auto eine Länge von 12.0 _Metern_ hat.

--- a/src/main/resources/config/typemapping.properties
+++ b/src/main/resources/config/typemapping.properties
@@ -1,13 +1,16 @@
 #Datatype mappings
 #Wed Aug 20 16:11:07 CEST 2014
-http\://www.w3.org/2001/XMLSchema\#long=models.datatypes.LongValue
-http\://www.w3.org/2001/XMLSchema\#string=models.datatypes.StringValue
-http\://www.w3.org/2001/XMLSchema\#boolean=models.datatypes.BooleanValue
-http\://www.w3.org/2001/XMLSchema\#integer=models.datatypes.IntegerValue
-http\://www.w3.org/2001/XMLSchema\#float=models.datatypes.FloatValue
-http\://www.w3.org/2001/XMLSchema\#int=models.datatypes.IntegerValue
+#Mappings für die Standard-XSD-Typen - unabhängig von der Ontologie
+http\://www.w3.org/2001/XMLSchema\#long=models.datatypes.xsd.LongValue
+http\://www.w3.org/2001/XMLSchema\#string=models.datatypes.xsd.StringValue
+http\://www.w3.org/2001/XMLSchema\#boolean=models.datatypes.xsd.BooleanValue
+http\://www.w3.org/2001/XMLSchema\#integer=models.datatypes.xsd.IntegerValue
+http\://www.w3.org/2001/XMLSchema\#float=models.datatypes.xsd.FloatValue
+http\://www.w3.org/2001/XMLSchema\#int=models.datatypes.xsd.IntegerValue
 
 #Spezielle Datentypen für die Logistik-Ontologie:
 http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Meter=models.datatypes.custom.MeterValue
 http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Euro=models.datatypes.custom.EuroValue
 http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Monate=models.datatypes.custom.MonateValue
+http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Tonnen=models.datatypes.custom.TonnenValue
+http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#kg=models.datatypes.custom.KgValue
