--- a/src/test/resources/config/typemapping.properties
+++ b/src/test/resources/config/typemapping.properties
@@ -1,8 +1,8 @@
 #Datatype mappings
 #Wed Aug 20 16:11:07 CEST 2014
-http\://www.w3.org/2001/XMLSchema\#long=models.datatypes.LongValue
-http\://www.w3.org/2001/XMLSchema\#string=models.datatypes.StringValue
-http\://www.w3.org/2001/XMLSchema\#boolean=models.datatypes.BooleanValue
-http\://www.w3.org/2001/XMLSchema\#integer=models.datatypes.IntegerValue
-http\://www.w3.org/2001/XMLSchema\#float=models.datatypes.FloatValue
-http\://www.w3.org/2001/XMLSchema\#int=models.datatypes.IntegerValue
+http\://www.w3.org/2001/XMLSchema\#long=models.datatypes.xsd.LongValue
+http\://www.w3.org/2001/XMLSchema\#string=models.datatypes.xsd.StringValue
+http\://www.w3.org/2001/XMLSchema\#boolean=models.datatypes.xsd.BooleanValue
+http\://www.w3.org/2001/XMLSchema\#integer=models.datatypes.xsd.IntegerValue
+http\://www.w3.org/2001/XMLSchema\#float=models.datatypes.xsd.FloatValue
+http\://www.w3.org/2001/XMLSchema\#int=models.datatypes.xsd.IntegerValue
