--- a/src/main/resources/config/casestructure.properties
+++ b/src/main/resources/config/casestructure.properties
@@ -9,7 +9,7 @@ descriptionClass=Projektbeschreibung
 
 #Falllösungsklasse in der Domain-Ontologie
 #solutionClass=FallLoesung
-solutionClass=Projektloesung
+solutionClass=Projektlösung
 
 #Fallbewertungsklasse in der Domain-Ontologie
 #justificationClass=FallBewertung
@@ -39,7 +39,7 @@ hasDescription=bestehtAusProjektbeschreibung
 
 #Attribut, das Fallinstanz und Falllösung verknüft
 #hasSolution=hatFallLösung
-hasSolution=bestehtAusProjektloesung
+hasSolution=bestehtAusProjektlösung
 
 #Attribut, das Fallinstanz und Fallbewertung verknüpft
 #hasJustification=hatFallBewertung
