--- a/src/main/resources/config/typemapping.properties
+++ b/src/main/resources/config/typemapping.properties
@@ -14,3 +14,5 @@ http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology
 http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Monate=models.datatypes.custom.MonateValue
 http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Tonnen=models.datatypes.custom.TonnenValue
 http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#kg=models.datatypes.custom.KgValue
+http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Personenmonate=models.datatypes.custom.PersonenmonateValue
+http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Stück=models.datatypes.custom.StueckValue
