Erweiterter Beißel-Algo funktioniert jetzt zuverlässig mit der Ontologie und allen darin enthaltenen Datentypen.

--- a/src/main/resources/config/typemapping.properties
+++ b/src/main/resources/config/typemapping.properties
@@ -16,3 +16,4 @@ http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology
 http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#kg=models.datatypes.custom.KgValue
 http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Personenmonate=models.datatypes.custom.PersonenmonateValue
 http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#Stück=models.datatypes.custom.StueckValue
+http\://www.semanticweb.org/martin.kowalski/ontologies/2013/11/untitled-ontology-17\#TARICNummer=models.datatypes.custom.TaricValue
