--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.fxmisc.richtext</groupId>
-            <artifactId>richtextfx</artifactId>
-            <version>0.4</version>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>8.20.8</version>
         </dependency>
 
 
