Ein bisschen aufgeräumt...

--- a/src/test/resources/config/typemapping.properties
+++ b/src/test/resources/config/typemapping.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 #Datatype mappings
 #Wed Aug 20 16:11:07 CEST 2014
 http\://www.w3.org/2001/XMLSchema\#long=models.datatypes.xsd.LongValue
