--- a/src/main/resources/config/typemapping.properties
+++ b/src/main/resources/config/typemapping.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 #Datatype mappings
 #Wed Aug 20 16:11:07 CEST 2014
 #Mappings für die Standard-XSD-Typen - unabhängig von der Ontologie
